--- a/ITP_OFFICE_ASSISTANCE_SYSTEM/ITP_OFFICE_ASSISTANCE_SYSTEM/Finanacial.resx
+++ b/ITP_OFFICE_ASSISTANCE_SYSTEM/ITP_OFFICE_ASSISTANCE_SYSTEM/Finanacial.resx
@@ -1899,4 +1899,13 @@
         jQkJCQkJCQkJCTOT6MaEhISEhISEhISZyJf3/T8iFmQHWY2JKgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="DeptName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Amount.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="PreYear.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
